# simple-mcp-test

./: .gitignore  README.md  pyproject.toml
scripts/: test_blockchain_client.py  test_simple_mcp.py
src/: blockchain_mcp_client.py  simple_mcp_client.py  simple_mcp_server.py
