[project]
name = "mcp-client"
version = "0.1.0"
description = "EVM MCP client for blockchain interactions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.5.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
